2008-09-03  Philip Van Hoof  <philip@codeminded.be>

	* ChangeLog:
	* src/trackerd/tracker-processor.c: Reverted revision 2159

2008-08-29  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c (process_func)
	(tracker_indexer_check_state): If for some reason the indexer is
	stopped and started again somewhere inside process_func(), the indexer
	would end up with the current idle function "detached" but still
	running, and a new one. So, if we're inside process_func, we won't
	remove the idle function immediately, instead we'll wait and make the
	idle func return FALSE if the indexer should still be paused.

2008-08-29  Ivan Frade  <ivan.frade@nokia.com>

	* src/tracker-indexer/tracker-indexer.c
	* src/trackerd/tracker-daemon.c
	* src/trackerd/tracker-files.c
	* src/trackerd/tracker-keywords.c
	* src/trackerd/tracker-metadata.c

	Use context instead of FALSE as second parameter for
	tracker_dbus_async_return_if_fail . This fixes crashes in trackerd
	when the assertions failed.
	
2008-08-29  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-index.c (tracker_db_index_flush): Do
	not use GHashTableIter API here, we can't avoid for sure having other
	portions of the code try to insert data to the index cache while it's
	flushing, and performance here is largely bound to QDBM, so it won't
	be that noticeable anyways.

2008-08-29  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-main.c (initialize_signal_handler):
	Ignore SIGPIPE, so we can handle it ourselves.
	* src/tracker-indexer/tracker-metadata-utils.c: It's possible that the
	indexer is trying to write to the metadata extractor before it
	realizes it has quit/crashed. Handle errors writing to a broken pipe
	and respawn the metadata process context in that case.

2008-08-28  Ivan Frade  <ivan.frade@nokia.com>

	* src/tracker-thumbnailer/tracker-thumbnailer.c:
	Splitted the code in functions. Fixed some memory leaks. Fixed