@@ -1,3 +1,13 @@
+2008-09-03  Martyn Russell  <martyn@imendio.com>
+
+	* src/tracker-indexer/tracker-metadata-utils.c: (get_file_content),
+	(tracker_metadata_utils_get_text),
+	(tracker_metadata_utils_get_thumbnail): Improved the
+	get_file_content() function to check for '\n' in the first 64Kb
+	buffer and if it doesn't exist we don't index the file. Also,
+	check for UTF-8 validity so we don't stop on exactly 'x' bytes but
+	where the last valid character is.
+
 2008-09-03  Philip Van Hoof  <philip@codeminded.be>
 
 	* ChangeLog:
